--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,43 @@
+alembic==1.11.1
+anyio==3.7.0
+asyncpg==0.27.0
+autoflake==1.7.8
+black==23.3.0
 cfgv==3.3.1
+click==8.1.3
 distlib==0.3.6
-filelock==3.11.0
-identify==2.5.22
-nodeenv==1.7.0
-platformdirs==3.2.0
-pre-commit==3.2.2
+filelock==3.12.0
+flake8==5.0.4
+flake8-broken-line==1.0.0
+flake8-isort==6.0.0
+flake8-plugin-utils==1.3.2
+Flake8-pyproject==1.2.3
+flake8-return==1.2.0
+greenlet==2.0.2
+identify==2.5.24
+idna==3.4
+iniconfig==2.0.0
+isort==5.12.0
+Mako==1.2.4
+MarkupSafe==2.1.3
+mccabe==0.7.0
+mypy==1.3.0
+mypy-extensions==1.0.0
+nodeenv==1.8.0
+packaging==23.1
+pathspec==0.11.1
+pep8-naming==0.13.3
+platformdirs==3.5.1
+pluggy==1.0.0
+pre-commit==3.3.2
+pycodestyle==2.9.1
+pydantic==1.10.8
+pyflakes==2.5.0
+pytest==7.3.1
+python-dotenv==1.0.0
 PyYAML==6.0
-six==1.16.0
-virtualenv==20.21.0
+sniffio==1.3.0
+SQLAlchemy==2.0.15
+SQLAlchemy-Utils==0.41.1
+typing_extensions==4.6.3
+virtualenv==20.23.0
